--- a/docroot/themes/iucn_who/less/homepage.less
+++ b/docroot/themes/iucn_who/less/homepage.less
@@ -697,5 +697,5 @@
 }
 
 .map-site-details-container .simplebar-track {
-  z-index: 2;
+  z-index: 3;
 }
